force-app/main/default/objects/sked__Resource_Shift__c/sked__Resource_Shift__c.object-meta.xml
<CustomObject>
    <label>Resource Shift</label>
    <nameField>
        <displayFormat>RSFT-{00000}</displayFormat>
        <label>Resource Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>