force-app/main/default/objects/sked__Resource_Shift__c/fields/sked__Actual_End__c.field-meta.xml
<CustomField>
    <fullName>sked__Actual_End__c</fullName>
    <description>The actual time this shift ended.</description>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>