force-app/main/default/objects/sked__Resource_Shift__c/fields/sked__Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Actual_Start__c</fullName>
    <description>The actual time this shift started.</description>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>