force-app/main/default/objects/sked__Resource_Shift__c/fields/sked__Shift__c.field-meta.xml
<CustomField>
    <fullName>sked__Shift__c</fullName>
    <label>Shift</label>
    <referenceTo>sked__Shift__c</referenceTo>
    <relationshipLabel>Resource Shifts</relationshipLabel>
    <relationshipName>Resource_Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>